practice exam with grading scheme

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -35,15 +35,18 @@ Jul-Nov 2018 </h1>
 </td>
 
 <table border="1" cellspacing="5" cellpadding="5" width="100%">
-<h2><a href="https://owncloud.iitm.ac.in/index.php/s/JQztf5HFEt7DqwQ" target="_blank">Course contents</a></h2>
-<h2> Instructor office hours: Wednesdays 2-3 PM, TDCE 203 </h2> <br>
+	<td width="100%">
+	<center>
+		<h2><a href="https://owncloud.iitm.ac.in/index.php/s/JQztf5HFEt7DqwQ" target="_blank">Course contents</a></h2> 
+<h2> Instructor office hours: Wednesdays 2-3 PM, TDCE 203 </h2></center> <br>
 </center>
-
+	</td>
+</table>
 
 <table border="1" cellspacing="5" cellpadding="5" width="100%">
 <tr>
 <td width="50%">
-<h2>Course Lectures </h2>
+<h3>Course Lectures </h3>
 
 <a href="https://owncloud.iitm.ac.in/index.php/s/lGo6RpBHLT30rj4" target="_blank">Lecture notes from Prof. TS</a> (same as on moodle) <br><br>
 
@@ -74,8 +77,14 @@ Jul-Nov 2018 </h1>
 <li>Problem Set 1: 	
  <a href="https://owncloud.iitm.ac.in/index.php/s/TH6VK3PsuQErZkc" target="_blank">Fundamentals, Work</a>
 <li>Problem Set 2: 	
- <a href="https://owncloud.iitm.ac.in/index.php/s/6ewOu7yjhtWCxIE" target="_blank">Temperature, Heat</a>
+ <a href="https://owncloud.iitm.ac.in/index.php/s/6ewOu7yjhtWCxIE" target="_blank">Temperature, Heat</a> <br><br>
 </ul>
+
+<h3> Practice exams</h3>
+<ul>
+<li>Quiz I: Jul-Nov 2016: 	
+ <a href="https://owncloud.iitm.ac.in/index.php/s/HMqKGeioZj50QaC" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/LOu1X3HCDcNQJiE" target="_blank">Solutions</a>
+
 </td>
 </tr>
 </table>
