--- a/index.html
+++ b/index.html
@@ -919,31 +919,31 @@ Write-up coming soon ...
 <tr>
 <td>
 <h2> Alma mater</h2>
-<a href="http://www.sknspmcvv.org"  style="text-decoration:none;color:white" target="_blank">Vivekananda Vidyalaya, Perambur</a></br>
-<a href="http://www.davgirlsgopalapuram.com"  style="text-decoration:none;color:white" target="_blank">DAV Girls, Gopalapuram</a></br>
-<a href="http://www.iitm.ac.in"  style="text-decoration:none;color:white" target="_blank">Indian Institute of Technology Madras</a></br>
-<a href="http://www.stanford.edu"  style="text-decoration:none;color:white" target="_blank">Stanford University</a></br>
-<a href="http://www.cornell.edu"  style="text-decoration:none;color:white" target="_blank">Cornell University</a></br></br>
+<a href="http://www.sknspmcvv.org" target="_blank">Vivekananda Vidyalaya, Perambur</a></br>
+<a href="http://www.davgirlsgopalapuram.com" target="_blank">DAV Girls, Gopalapuram</a></br>
+<a href="http://www.iitm.ac.in" target="_blank">Indian Institute of Technology Madras</a></br>
+<a href="http://www.stanford.edu" target="_blank">Stanford University</a></br>
+<a href="http://www.cornell.edu" target="_blank">Cornell University</a></br></br>
 </td>
 </tr>
 
 <tr>
 <td>
 <h2> Useful web-based tools</h2>
-<a href="http://arohatgi.info/WebPlotDigitizer/"  style="text-decoration:none;color:white" target="_blank">Web plot digitizer</a></br>
-<a href="http://www.tutorialspoint.com/codingground.htm"  style="text-decoration:none;color:white" target="_blank">Coding ground</a></br>
-<a href="https://www.overleaf.com"  style="text-decoration:none;color:white" target="_blank">WriteLaTeX</a></br>
-<a href="http://detexify.kirelabs.org/classify.html"  style="text-decoration:none;color:white" target="_blank">Detexify</a></br>
-<a href="https://www.wordclouds.com"  style="text-decoration:none;color:white" target="_blank">WordClouds</a></br></br>
+<a href="http://arohatgi.info/WebPlotDigitizer/" target="_blank">Web plot digitizer</a></br>
+<a href="http://www.tutorialspoint.com/codingground.htm" target="_blank">Coding ground</a></br>
+<a href="https://www.overleaf.com" target="_blank">WriteLaTeX</a></br>
+<a href="http://detexify.kirelabs.org/classify.html" target="_blank">Detexify</a></br>
+<a href="https://www.wordclouds.com" target="_blank">WordClouds</a></br></br>
 </td>
 </tr>
 
 <tr>
 <td>
 <h2> Unclassified </h2>
-<a href="gallery/gallery.html" style="text-decoration:none;color:white" target="_blank"> Gallery </a>  <br>
+<a href="gallery/gallery.html" target="_blank"> Gallery </a>  <br>
 <body link="gray">
-<a href="logger/logger.html" style="text-decoration:none;color:white" target="_blank"> Musings </a> </h2> <br><br>
+<a href="logger/logger.html" target="_blank"> Musings </a> </h2> <br><br>
 </td>
 </tr>
 
