add link to others page

--- a/index.html
+++ b/index.html
@@ -941,9 +941,11 @@ Write-up coming soon ...
 <tr>
 <td>
 <h2> Unclassified </h2>
-<a href="gallery/gallery.html" target="_blank"> Gallery </a>  <br>
-<body link="gray">
-<a href="logger/logger.html" target="_blank"> Musings </a> </h2> <br><br>
+<a href="gallery/gallery.html" target="_blank"> Gallery</a>  <br>
+<a href="logger/logger.html" target="_blank"> Musings</a> <br>
+<a href="https://www.hackerrank.com" target="_blank"> HackerRank</a> <br>
+<a href="https://www.gocomics.com/calvinandhobbes/" target="_blank"> Calvin & Hobbes</a> <br>
+<br>
 </td>
 </tr>
 
