add link to others page

--- a/index.html
+++ b/index.html
@@ -945,6 +945,7 @@ Write-up coming soon ...
 <a href="logger/logger.html" target="_blank"> Musings</a> <br>
 <a href="https://www.hackerrank.com" target="_blank"> HackerRank</a> <br>
 <a href="https://www.gocomics.com/calvinandhobbes/" target="_blank"> Calvin & Hobbes</a> <br>
+<a href="http://phdcomics.com" target="_blank"> PhD comics </a><br>
 <br>
 </td>
 </tr>
