--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -55,7 +55,8 @@ Jul-Nov 2018 </h1>
 <h3> Lecture summary </h3>
 <ul>	<li>	 	
  <a href="https://owncloud.iitm.ac.in/index.php/s/5dEzCKvgaRtbv9M" target="_blank">Fundamentals</a>
-	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/xhD8v8FteRubLS9" target="_blank">Work</a><br> <br>
+	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/xhD8v8FteRubLS9" target="_blank">Work</a>
+	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/j1csU9MfhN2Ku3k" target="_blank">Temperature, Heat</a><br> <br>
 	</ul>
 	
 <h3> Property tables: same as on moodle </h3>
