--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -72,6 +72,8 @@ Jul-Nov 2018 </h1>
  <a href="https://owncloud.iitm.ac.in/index.php/s/mTtvHG8P9RmTeev" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/j7ksBktLoE6ToB4" target="_blank">Solutions</a> <br>
     <li>Tutorial 2:
  <a href="https://owncloud.iitm.ac.in/index.php/s/TqMN1hbNWSwx1CQ" target="_blank">Problems</a> <br>
+ 	<li>Tutorial 3:
+ <a href="https://owncloud.iitm.ac.in/index.php/s/hYlaXRyBe6fnQZI" target="_blank">Problems</a> <br>
 <br>
 	</ul>
 
@@ -80,7 +82,10 @@ Jul-Nov 2018 </h1>
 <li>Problem Set 1: 	
  <a href="https://owncloud.iitm.ac.in/index.php/s/TH6VK3PsuQErZkc" target="_blank">Fundamentals, Work</a>
 <li>Problem Set 2: 	
- <a href="https://owncloud.iitm.ac.in/index.php/s/6ewOu7yjhtWCxIE" target="_blank">Temperature, Heat</a> <br><br>
+ <a href="https://owncloud.iitm.ac.in/index.php/s/6ewOu7yjhtWCxIE" target="_blank">Temperature, Heat</a>
+<li>Problem Set 3: 	
+  <a href="https://owncloud.iitm.ac.in/index.php/s/sS0Fp2ZbT3A1K73" target="_blank">Pure substances, First law</a>
+   <br><br>
 </ul>
 
 <h3> Practice exams</h3>
