--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -73,7 +73,7 @@ Jul-Nov 2018 </h1>
 	<li>Tutorial 1: 	
  <a href="https://owncloud.iitm.ac.in/index.php/s/mTtvHG8P9RmTeev" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/j7ksBktLoE6ToB4" target="_blank">Solutions</a> <br>
     <li>Tutorial 2:
- <a href="https://owncloud.iitm.ac.in/index.php/s/TqMN1hbNWSwx1CQ" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/oFya5hMu8El0kE5" target="_blank">Solutions</a> (Solution to P6 must be corrected) <br>
+ <a href="https://owncloud.iitm.ac.in/index.php/s/TqMN1hbNWSwx1CQ" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/oFya5hMu8El0kE5" target="_blank">Solutions</a> (Solution to P6 needs correction) <br>
  	<li>Tutorial 3:
  <a href="https://owncloud.iitm.ac.in/index.php/s/Wu0avN5EwW9kHRP" target="_blank">Problems</a> <br>
 <br>
@@ -86,7 +86,12 @@ Jul-Nov 2018 </h1>
 <li>Problem Set 2: 	
  <a href="https://owncloud.iitm.ac.in/index.php/s/6ewOu7yjhtWCxIE" target="_blank">Temperature, Heat</a>
 <li>Problem Set 3: 	
-  <a href="https://owncloud.iitm.ac.in/index.php/s/sS0Fp2ZbT3A1K73" target="_blank">Pure substances, First law</a>
+  <a href="https://owncloud.iitm.ac.in/index.php/s/sS0Fp2ZbT3A1K73" target="_blank">Pure substances, First law (set I)</a>
+  <li>Problem Set 4: 	
+    <a href="https://owncloud.iitm.ac.in/index.php/s/JDxurkw5B2xqClv" target="_blank">First law involving ideal gas </a>
+  <a href="https://owncloud.iitm.ac.in/index.php/s/fdf2Schlnux6Rsr" target="_blank">Ideal gas and mixtures, first law</a>
+  <a href="https://owncloud.iitm.ac.in/index.php/s/6S9euS2NApPYklQ" target="_blank">Steam-water substance, first law</a>
+  
    <br><br>
 </ul>
 
