--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -86,11 +86,11 @@ Jul-Nov 2018 </h1>
 <li>Problem Set 2: 	
  <a href="https://owncloud.iitm.ac.in/index.php/s/6ewOu7yjhtWCxIE" target="_blank">Temperature, Heat</a>
 <li>Problem Set 3: 	
-  <a href="https://owncloud.iitm.ac.in/index.php/s/sS0Fp2ZbT3A1K73" target="_blank">Pure substances, First law (set I)</a>
+  <a href="https://owncloud.iitm.ac.in/index.php/s/sS0Fp2ZbT3A1K73" target="_blank">Pure substances, First law</a>
   <li>Problem Set 4: 	
     <a href="https://owncloud.iitm.ac.in/index.php/s/JDxurkw5B2xqClv" target="_blank">Ideal gas, First law</a>
-  <a href="https://owncloud.iitm.ac.in/index.php/s/fdf2Schlnux6Rsr" target="_blank">Ideal gas and mixtures, first law</a>
-  <a href="https://owncloud.iitm.ac.in/index.php/s/6S9euS2NApPYklQ" target="_blank">Steam-water substance, first law</a>
+  <li>Problem Set 5: <a href="https://owncloud.iitm.ac.in/index.php/s/fdf2Schlnux6Rsr" target="_blank">Ideal gas and mixtures, first law</a>
+  <li>Problem Set 6:  <a href="https://owncloud.iitm.ac.in/index.php/s/6S9euS2NApPYklQ" target="_blank">Steam-water substance, first law</a>
   
    <br><br>
 </ul>
