project asbtract edited

--- a/project_writeup/Reduced_Reaction_Models_For_Combustion.html
+++ b/project_writeup/Reduced_Reaction_Models_For_Combustion.html
@@ -4,18 +4,21 @@
 <title>Reduced Reaction Models For Combustion</title>
 <head>
 <style type="text/css">
-body{color:black}
+body{color:white}
 body{font-family:"Palatino"}
 body{font-size: 1.1em;}
 A:link{color:yellow}
 A:visited{color:yellow}
 A:hover{color:red}
-A:hover{color:red}
-h2   {color: black;}
-}
+A:hover{color:pink}
+h2   {color: pink;}
+h3   {color: lightgreen;}
+h4   {color: lightblue;}
 </style>
 </head>
 
+<body bgcolor = "black">
+<center> <h1>Implementing algorithms for mechanism reduction</h1> </center>	
 <h2>Abstract</h2>
 
 Reaction mechanisms that describe the oxidation of a fuel are huge with several thousands of individual steps. While using them in computations, compact representation of these schemes are essential. This project initially involves developing a black box tool to reduce reaction mechanisms based on existing ideas. Improvements will be suggested to existing methods, their pros and cons will be evaulated, and the perfect order in which they must be applied to achieve best results will be investigated.
@@ -23,10 +26,23 @@ Reaction mechanisms that describe the oxidation of a fuel are huge with several 
 
 <h2>Pre-requisite</h2>
 
-Penchant for writing stand-alone codes and interest in combustion
+Penchant for writing stand-alone codes, working knowledge in C++ (inclusive of pointers, classes, inheritance, memory handling), and interest in combustion
 
 <!-- <h2>Reading</h2> -->
 <!-- http://web.stanford.edu/group/pitsch/publication/PepiotJMUSSCI2005.pdf -->
 <!-- http://www.tandfonline.com/doi/abs/10.1080/13647830802245177 -->
+
+
+<h2>Additional details</h2>
+
+<b>Position:</b> Project assistant <br>
+
+<b>Duration:</b> 1 year <br>
+
+<b>Salary:</b> As per institute norms <br>
+
+<b>Selection procedure:</b> Personal interview. <br><br>
+
+If interested, write to me with a subject line that includes the title of the topic and your CV. If your candidature is suitable, you will receive an intimation for a personal interview. 
   
 </body></html>
