project assistant  edited

--- a/project_writeup/Reduced_Reaction_Models_For_Combustion.html
+++ b/project_writeup/Reduced_Reaction_Models_For_Combustion.html
@@ -43,6 +43,6 @@ Penchant for writing stand-alone codes, working knowledge in C++ (inclusive of p
 
 <b>Selection procedure:</b> Personal interview. <br><br>
 
-If interested, write to me with a subject line that includes the title of the topic and your CV. If your candidature is suitable, you will receive an intimation for a personal interview. 
+If interested, write to me with a subject line that includes the title of the topic and your CV. If your application is found suitable, you will receive an intimation for a personal interview. 
   
 </body></html>
