--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -47,6 +47,8 @@ Jul-Nov 2018 </h1>
 <table border="1" cellspacing="5" cellpadding="5" width="100%">
 <tr>
 <td width="50%">
+<h2>Lecture materials, Handouts, Exams </h3>
+
 <h3>Course Lectures </h3>
 <ul>	<li>
 <a href="https://owncloud.iitm.ac.in/index.php/s/lGo6RpBHLT30rj4" target="_blank">Lecture notes from Prof. TS</a> (same as on moodle) <br> <br>
@@ -65,7 +67,15 @@ Jul-Nov 2018 </h1>
 <h3> Property tables: same as on moodle </h3>
 <ul>	<li>	<a href="https://owncloud.iitm.ac.in/index.php/s/RPiQyj4w9J5nizu" target="_blank">Water and R134a</a><br> <br>
 	</ul>
+
+
+<h3> Exams </h3>
+<ul> 
+	<li> Quiz I: <a href="https://owncloud.iitm.ac.in/index.php/s/mBATrsORPwf3Bh7" target="_blank">Questions</a>
+<br></ul>
+
 </td>
+
 
 <td width="50%">
 <h2>Problem sheets </h2>
@@ -77,7 +87,9 @@ Jul-Nov 2018 </h1>
  <a href="https://owncloud.iitm.ac.in/index.php/s/TqMN1hbNWSwx1CQ" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/oFya5hMu8El0kE5" target="_blank">Solutions</a> (Solution to P6 needs correction) <br>
  	<li>Tutorial 3:
  <a href="https://owncloud.iitm.ac.in/index.php/s/Wu0avN5EwW9kHRP" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/fsKkxo7jRkBhQjT" target="_blank"> Solutions-Part I</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/lcmwPpUS4uTFLn0" target="_blank"> Solutions-Part II</a><br>
-<br>
+ <li> Tutorial 4: <a href="https://owncloud.iitm.ac.in/index.php/s/jMFWZNLw58997lH" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/igHVMClfIyyuOHY"> Solutions</a> <br>
+	 
+	 <br>
 	</ul>
 
 <h3> Additional problem sheets </h3>
