ME1100:Tut 5 added

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -69,9 +69,9 @@ Jul-Nov 2018 </h1>
 	</ul>
 
 
-<h3> Exams </h3>
+<h3> Exams: same as on moodle </h3>
 <ul> 
-	<li> Quiz I: <a href="https://owncloud.iitm.ac.in/index.php/s/mBATrsORPwf3Bh7" target="_blank">Questions</a>
+	<li> Quiz I: <a href="https://owncloud.iitm.ac.in/index.php/s/mBATrsORPwf3Bh7" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/47uKuppudIFq3Fk" target="_blank">Solutions</a>
 <br></ul>
 
 </td>
@@ -88,7 +88,7 @@ Jul-Nov 2018 </h1>
  	<li>Tutorial 3:
  <a href="https://owncloud.iitm.ac.in/index.php/s/Wu0avN5EwW9kHRP" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/fsKkxo7jRkBhQjT" target="_blank"> Solutions-Part I</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/lcmwPpUS4uTFLn0" target="_blank"> Solutions-Part II</a><br>
  <li> Tutorial 4: <a href="https://owncloud.iitm.ac.in/index.php/s/jMFWZNLw58997lH" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/igHVMClfIyyuOHY"> Solutions</a> <br>
-	 
+ <li> Tutorial 5: <a href="https://owncloud.iitm.ac.in/index.php/s/ZwvEhgrHn5gH8n0" target="_blank">Problems</a>
 	 <br>
 	</ul>
 
