ME1100: notes for I law for flow processes

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -61,6 +61,7 @@ Jul-Nov 2018 </h1>
 	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/j1csU9MfhN2Ku3k" target="_blank">Temperature, Heat</a>
 	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/0eo7s7DeamNn4Uq" target="_blank">First Law of thermodynamics</a>
 	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/aFUgcebOONekXKT" target="_blank">Pure substances</a>
+	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/9gjMQGhXIH0C0ZW" target="_blank">First Law for flow processes</a>
 		<br> <br>
 	</ul>
 	
