--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -108,7 +108,7 @@ Jul-Nov 2018 </h1>
   <li>Problem Set 7: <a href="https://owncloud.iitm.ac.in/index.php/s/GvaX7aIOCVryARc" target="_blank">Steam-water substance, first law</a>
   <li>Problem Set 8: <a href="https://owncloud.iitm.ac.in/index.php/s/9US7dpX4GytJhEB" target="_blank">First Law for flow processes</a>
   <li>Problem Set 9: <a href="https://owncloud.iitm.ac.in/index.php/s/XPIftdM8IecgId6" target="_blank">First Law for flow processes</a>
-  <li>Problem Set 10: <a href="https://owncloud.iitm.ac.in/index.php/s/4qAp0GcmMBTuMQM" target="_blank">First Law for flow processes</a>
+  <li>Problem Set 10: <a href="https://owncloud.iitm.ac.in/index.php/s/4qAp0GcmMBTuMQM" target="_blank">First Law for flow processes</a> (view-able upon downloading)
    <br><br>
 </ul>
 
