--- a/index.html
+++ b/index.html
@@ -683,6 +683,7 @@ Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic mode
 <div id="panel6">
 	<ul style="list-style-type:square">
 	<li><a href="https://www.dropbox.com/s/mybfkju6098hwlg/seshadri_CTM_R1.pdf?dl=0" target="_blank">Submitted version* (under review)</a></li>
+	<li><a href="https://www.dropbox.com/s/xjgw14625jtc9yw/kinetic_analysis_RK_KN.pdf?dl=0" target="_blank">Supplementary document* (under review)</a></li>
 </ul>
 </div>
 <br>
