me1100: moving things

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -70,16 +70,27 @@ Jul-Nov 2018 </h1>
 	</ul>
 
 
+
+
+<h3> Practice exams</h3>
+<ul>
+<li>Quiz I: Jul-Nov 2016: 	
+ <a href="https://owncloud.iitm.ac.in/index.php/s/HMqKGeioZj50QaC" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/LOu1X3HCDcNQJiE" target="_blank">Solutions</a>
+<li>Mock Quiz I: <a href="https://owncloud.iitm.ac.in/index.php/s/Dj4z87WCepzRcr4" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/p8xPsVC6WTjZjav" target="_blank">Solutions</a>
+<li>Previous years' Quiz I: <a href="https://owncloud.iitm.ac.in/index.php/s/mQcRjFoTFRDYL3m" target="_blank">Questions</a> (view-able upon downloading) <br>
+<li>Quiz II: Jul-Nov 2016: 	
+	 <a href="https://owncloud.iitm.ac.in/index.php/s/JPAouIbyyhjtkBU" target="_blank">Questions</a>
+</ul>
+
 <h3> Exams: same as on moodle </h3>
 <ul> 
 	<li> Quiz I: <a href="https://owncloud.iitm.ac.in/index.php/s/mBATrsORPwf3Bh7" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/47uKuppudIFq3Fk" target="_blank">Solutions</a>
 <br></ul>
-
 </td>
 
 
 <td width="50%">
-<h2>Problem sheets </h2>
+<h2>Tutorials and Problem sheets </h2>
 <h3> Tutorials: same as on moodle </h3>
 <ul>
 	<li>Tutorial 1: 	
@@ -89,7 +100,7 @@ Jul-Nov 2018 </h1>
  	<li>Tutorial 3:
  <a href="https://owncloud.iitm.ac.in/index.php/s/Wu0avN5EwW9kHRP" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/fsKkxo7jRkBhQjT" target="_blank"> Solutions-Part I</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/lcmwPpUS4uTFLn0" target="_blank"> Solutions-Part II</a><br>
  <li> Tutorial 4: <a href="https://owncloud.iitm.ac.in/index.php/s/jMFWZNLw58997lH" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/igHVMClfIyyuOHY"> Solutions</a> <br>
- <li> Tutorial 5: <a href="https://owncloud.iitm.ac.in/index.php/s/ZwvEhgrHn5gH8n0" target="_blank">Problems</a>
+ <li> Tutorial 5: <a href="https://owncloud.iitm.ac.in/index.php/s/ZwvEhgrHn5gH8n0" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/TvR7zXe0adNkrU9"> Solutions</a> <br>
 	 <br>
 	</ul>
 
@@ -112,12 +123,15 @@ Jul-Nov 2018 </h1>
    <br><br>
 </ul>
 
-<h3> Practice exams</h3>
+<!-- <h3> Practice exams</h3>
 <ul>
 <li>Quiz I: Jul-Nov 2016: 	
  <a href="https://owncloud.iitm.ac.in/index.php/s/HMqKGeioZj50QaC" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/LOu1X3HCDcNQJiE" target="_blank">Solutions</a>
 <li>Mock Quiz I: <a href="https://owncloud.iitm.ac.in/index.php/s/Dj4z87WCepzRcr4" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/p8xPsVC6WTjZjav" target="_blank">Solutions</a>
-<li>Previous years' Quiz I: <a href="https://owncloud.iitm.ac.in/index.php/s/mQcRjFoTFRDYL3m" target="_blank">Questions</a> (view-able upon downloading)
+<li>Previous years' Quiz I: <a href="https://owncloud.iitm.ac.in/index.php/s/mQcRjFoTFRDYL3m" target="_blank">Questions</a> (view-able upon downloading) <br>
+	<hr>
+<li>Quiz II: Jul-Nov 2016: 	
+	 <a href="https://owncloud.iitm.ac.in/index.php/s/JPAouIbyyhjtkBU" target="_blank">Questions</a> -->
 </td>
 </tr>
 </table>
