me1100: adding 2nd law problems

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -101,6 +101,7 @@ Jul-Nov 2018 </h1>
  <a href="https://owncloud.iitm.ac.in/index.php/s/Wu0avN5EwW9kHRP" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/fsKkxo7jRkBhQjT" target="_blank"> Solutions-Part I</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/lcmwPpUS4uTFLn0" target="_blank"> Solutions-Part II</a><br>
  <li> Tutorial 4: <a href="https://owncloud.iitm.ac.in/index.php/s/jMFWZNLw58997lH" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/igHVMClfIyyuOHY"> Solutions</a> <br>
  <li> Tutorial 5: <a href="https://owncloud.iitm.ac.in/index.php/s/ZwvEhgrHn5gH8n0" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/TvR7zXe0adNkrU9"> Solutions</a> <br>
+ <li> Tutorial 6: <a href="https://owncloud.iitm.ac.in/index.php/s/dzAdAbbtYO2nJOm" target="_blank">Problems</a>
 	 <br>
 	</ul>
 
@@ -120,6 +121,7 @@ Jul-Nov 2018 </h1>
   <li>Problem Set 8: <a href="https://owncloud.iitm.ac.in/index.php/s/9US7dpX4GytJhEB" target="_blank">First Law for flow processes</a>
   <li>Problem Set 9: <a href="https://owncloud.iitm.ac.in/index.php/s/XPIftdM8IecgId6" target="_blank">First Law for flow processes</a>
   <li>Problem Set 10: <a href="https://owncloud.iitm.ac.in/index.php/s/4qAp0GcmMBTuMQM" target="_blank">First Law for flow processes</a> (view-able upon downloading)
+  <li>Problem Set 11: <a href="https://owncloud.iitm.ac.in/index.php/s/314ZGwfFqq8bBuq" target="_blank">Second law of thermodynamics</a> 
    <br><br>
 </ul>
 
