me1100: rearrange extra sheets

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -80,7 +80,7 @@ Jul-Nov 2018 </h1>
 <li>Previous years' Quiz I: <a href="https://owncloud.iitm.ac.in/index.php/s/mQcRjFoTFRDYL3m" target="_blank">Questions</a> (view-able upon downloading) <br>
 <li>Quiz II: Jul-Nov 2016: 	
 	 <a href="https://owncloud.iitm.ac.in/index.php/s/JPAouIbyyhjtkBU" target="_blank">Questions</a>
-</ul><br>
+</ul>
 
 <h3> Exams: same as on moodle </h3>
 <ul> 
@@ -105,23 +105,28 @@ Jul-Nov 2018 </h1>
 	 <br><br>
 	</ul>
 
+<h3> Exercise problems: same as on moodle </h3>
+<ul>
+	<li>Problem Set 1: 	
+	 <a href="https://owncloud.iitm.ac.in/index.php/s/TH6VK3PsuQErZkc" target="_blank">Fundamentals, Work</a>
+	<li>Problem Set 2: 	
+	 <a href="https://owncloud.iitm.ac.in/index.php/s/6ewOu7yjhtWCxIE" target="_blank">Temperature, Heat</a>
+	<li>Problem Set 4: 	
+    <a href="https://owncloud.iitm.ac.in/index.php/s/JDxurkw5B2xqClv" target="_blank">Ideal gas, First law</a>
+    <li>Problem Set 5: <a href="https://owncloud.iitm.ac.in/index.php/s/fdf2Schlnux6Rsr" target="_blank">Ideal gas and mixtures, first law</a>
+    <li>Problem Set 6:  <a href="https://owncloud.iitm.ac.in/index.php/s/6S9euS2NApPYklQ" target="_blank">Steam-water substance, first law</a>
+  <li>Problem Set 9: <a href="https://owncloud.iitm.ac.in/index.php/s/XPIftdM8IecgId6" target="_blank">First Law for flow processes</a>
+  <li>Problem Set 11: <a href="https://owncloud.iitm.ac.in/index.php/s/314ZGwfFqq8bBuq" target="_blank">Second law of thermodynamics</a> 
+	  <br><br>
+</ul>
+
 <h3> Additional problem sheets </h3>
 <ul>
-<li>Problem Set 1: 	
- <a href="https://owncloud.iitm.ac.in/index.php/s/TH6VK3PsuQErZkc" target="_blank">Fundamentals, Work</a>
-<li>Problem Set 2: 	
- <a href="https://owncloud.iitm.ac.in/index.php/s/6ewOu7yjhtWCxIE" target="_blank">Temperature, Heat</a>
 <li>Problem Set 3: 	
   <a href="https://owncloud.iitm.ac.in/index.php/s/sS0Fp2ZbT3A1K73" target="_blank">Pure substances, First law</a>
-  <li>Problem Set 4: 	
-    <a href="https://owncloud.iitm.ac.in/index.php/s/JDxurkw5B2xqClv" target="_blank">Ideal gas, First law</a>
-  <li>Problem Set 5: <a href="https://owncloud.iitm.ac.in/index.php/s/fdf2Schlnux6Rsr" target="_blank">Ideal gas and mixtures, first law</a>
-  <li>Problem Set 6:  <a href="https://owncloud.iitm.ac.in/index.php/s/6S9euS2NApPYklQ" target="_blank">Steam-water substance, first law</a>
   <li>Problem Set 7: <a href="https://owncloud.iitm.ac.in/index.php/s/GvaX7aIOCVryARc" target="_blank">Steam-water substance, first law</a>
   <li>Problem Set 8: <a href="https://owncloud.iitm.ac.in/index.php/s/9US7dpX4GytJhEB" target="_blank">First Law for flow processes</a>
-  <li>Problem Set 9: <a href="https://owncloud.iitm.ac.in/index.php/s/XPIftdM8IecgId6" target="_blank">First Law for flow processes</a>
   <li>Problem Set 10: <a href="https://owncloud.iitm.ac.in/index.php/s/4qAp0GcmMBTuMQM" target="_blank">First Law for flow processes</a> (view-able upon downloading)
-  <li>Problem Set 11: <a href="https://owncloud.iitm.ac.in/index.php/s/314ZGwfFqq8bBuq" target="_blank">Second law of thermodynamics</a> 
    <br><br>
 </ul>
 
