--- a/index.html
+++ b/index.html
@@ -678,12 +678,12 @@ Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic mode
 
 
 <div id="flip6">
-	<li> Gerald Mairinger, Rohit Sanjay Khare, Krithika Narayanaswamy, Martin Hunyadi-Gall, Vasudevan Raghavan, Kalyanasundaram Seshadri, "Experimental and Computational Investigation of the Influence of Stoichiometric Mixture Fraction on Structure and Extinction of Laminar, Nonpremixed Methoxymethane Flames" (under review)
+	<li> Gerald Mairinger, Rohit Sanjay Khare, Krithika Narayanaswamy, Martin Hunyadi-Gall, Vasudevan Raghavan, Kalyanasundaram Seshadri, "Experimental and Computational Investigation of the Influence of Stoichiometric Mixture Fraction on Structure and Extinction of Laminar, Nonpremixed Methoxymethane Flames", Combustion Theory and Modelling (accepted)
 </div>
 <div id="panel6">
 	<ul style="list-style-type:square">
-	<li><a href="https://www.dropbox.com/s/mybfkju6098hwlg/seshadri_CTM_R1.pdf?dl=0" target="_blank">Submitted version* (under review)</a></li>
-	<li><a href="https://www.dropbox.com/s/xjgw14625jtc9yw/kinetic_analysis_RK_KN.pdf?dl=0" target="_blank">Supplementary document* (under review)</a></li>
+	<li><a href="https://www.dropbox.com/s/mybfkju6098hwlg/seshadri_CTM_R1.pdf?dl=0" target="_blank">Preprint*</a></li>
+	<li><a href="https://www.dropbox.com/s/xjgw14625jtc9yw/kinetic_analysis_RK_KN.pdf?dl=0" target="_blank">Supplementary document</a></li>
 </ul>
 </div>
 <br>
