adding mma paper details

--- a/index.html
+++ b/index.html
@@ -664,14 +664,19 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 
 <ul>
 
-<div id="flip6">
+<div id="flip1">
 	<li> Shanmugasundaram Dakshnamurthy, Denis A. Knyazkov, Artem M.
 Dmitriev, Oleg P. Korobeinichev, Elna J.K. Nilsson, Alexander A.
-Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic model for high temperature oxidation of methyl methacrylate" (under review)
+Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic model for high temperature oxidation of methyl methacrylate", Combustion Science and Technology (accepted)
 </div>
-<div id="panel6">
+<div id="panel1">
 	<ul style="list-style-type:square">
-	<li><a href="https://www.dropbox.com/s/bfs9jm9ra5sqgsu/MMA_R1.pdf?dl=0" target="_blank">Submitted version* (under review)</a></li>
+	<li><a href="https://www.dropbox.com/s/bfs9jm9ra5sqgsu/MMA_R1.pdf?dl=0" target="_blank">Preprint*</a></li>
+	<li><a href="https://www.dropbox.com/s/doypdy7sg129b31/Supplementary_MMA.pdf?dl=0" target="_blank">Supplementary document</a></li>
+	<li>Experimental data: <a href="https://www.dropbox.com/s/93lg0d3klxy3uwd/MMA_mole%20fractions_final_EXPERIMENT.xls?dl=0" target="_blank">Speciation in atmospheric premixed flame, laminar burning velocities</a></li>
+	<li>Mechanism files: <a href="https://www.dropbox.com/s/nrvkm28650ybl68/MMA_reduced.chmech?dl=0" target="_blank">Chemkin format</a>/<a href="??">FlameMaster format</a>
+	<li><a href="https://www.dropbox.com/s/xrrg6i8mzaen3cj/thermo_bc_mma.txt?dl=0" target="_blank">Thermodynamic data</a></li>
+	<li><a href="https://www.dropbox.com/s/2q6j1oommdr4p4u/trans_bc_mma.txt?dl=0" target="_blank">Transport data</a></li>
 </ul>
 </div>
 <br>
@@ -694,7 +699,7 @@ Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic mode
 </div>
 <div id="panel7">
 	<ul style="list-style-type:square">
-	<li><a href="https://authors.elsevier.com/a/1XTGb2KiHMUm4"> Free access link</a> (valid until September 17th, 2018)
+	<li><a href="https://authors.elsevier.com/a/1XTGb2KiHMUm4"> Free access link</a> (valid until September 17, 2018)
 	<li><a href="https://www.dropbox.com/s/s8cvkpa6t25tgoh/MB_R2.pdf?dl=0" target="_blank">Preprint*</a> ,  <a href="https://www.dropbox.com/s/5qbzf8d3qcdr9mu/CNF_2.pdf?dl=0">Highlights</a></li>
 	<li><a href="https://www.dropbox.com/s/sq9cuvl15pbbpim/supplementary_CNF.pdf?dl=0" target="_blank">Supplementary document</a></li>
 		<li>Mechanism files: <br>
@@ -716,7 +721,7 @@ Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic mode
 	<li><a href="	https://authors.elsevier.com/a/1XHew2KiHMUbd" target="_blank">Free access Link</a> (valid until August 15, 2018)
 	<li><a href="https://www.dropbox.com/s/xlrfa5toz6ewris/Revised_Manuscript.pdf?dl=0" target="_blank">Preprint*</a> ,  <a href="https://www.dropbox.com/s/oqb8cuwcliwrza9/CNF_1.pdf?dl=0">Highlights</a></li>
 	<li><a href="https://www.dropbox.com/s/38016hs2zfwdud3/Supplementary_Material.pdf?dl=0" target="_blank">Supplementary document</a></li>
-		<li>Mechanism: 
+		<li>Mechanism files: 
 			<a href="https://www.dropbox.com/s/pu3zdxy1hd43iu9/Chemkin.mech?dl=0" target="_blank">Chemkin format</a>/<a href="https://www.dropbox.com/s/43d6zyd86inngbg/FlameMaster.mech?dl=0">FlameMaster format</a>
 		</li>
 		<li><a href="https://www.dropbox.com/s/l9ld3frev39f2oi/Thermo_File.txt?dl=0" target="_blank">Thermodynamic data</a></li>
@@ -738,10 +743,10 @@ Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic mode
 <br>
 	
 
-<div id="flip1">
+<div id="flip6">
 <li> S. Ambikasaran, K. Narayanaswamy "An accurate, fast, mathematically robust, universal, non-iterative algorithm for computing multi-component diffusion velocities", Proceedings of Combustion Institute, 36 (1), 507-515, 2017.
 </div>
-<div id="panel1">
+<div id="panel6">
 	<ul style="list-style-type:square">
 	<li><a href="http://arxiv.org/pdf/1512.01338" target="_blank">Preprint*</a></li>
 	<li><a href="http://www.sciencedirect.com/science/article/pii/S1540748916300554" target="_blank">Journal version</a></li>
