adding mc details

--- a/index.html
+++ b/index.html
@@ -469,9 +469,11 @@ Shanmugasundaram obtained his B. Tech and M. Tech in Mechanical Engineering from
 <td>
 
 <ul>
-<li> <h3>Oxidation kinetics of alternative aviation fuels:</h3> 
-Renewable and alternative fuels for aviation have advantages of lesser emissions and clean burning ability. To predict, assess, and understand their combustion characteristics from a fundamental approach, a kinetic model for a  suitable reference mixture that mimics a chosen alternative fuel is being developed. This opens up avenues to study several `drop-in alternatives' to current day aviation fuels. 
-</br>	
+<li> <h3>Importance of unsaturated ester constituent in biodiesel surrogates:</h3> 
+<!-- Renewable and alternative fuels for aviation have advantages of lesser emissions and clean burning ability. To predict, assess, and understand their combustion characteristics from a fundamental approach, a kinetic model for a  suitable reference mixture that mimics a chosen alternative fuel is being developed. This opens up avenues to study several `drop-in alternatives' to current day aviation fuels. </br>-->	
+	In one of our recent studies, we investigated the kinetics of a small ester, which is a potentially important candidate to represent the longer chain molecules in the real biodiesel fuel, namely methylbutanoate. While methylbutanoate is a saturated ester, the real biodiesel also contains a significant degree of unsaturation (depending on the source of the oil), which results in considerable differences in combustion characteristics, such as in ignition delay times. In this work, the importance of including an unsaturated molecule in the bioidiesel surrogate will be investigated. <br><br>	
+	A kinetic scheme is being developed for methyl crotonoate, which is a simple unsaturated ester, that is representative of the long chain unsaturated esters in the real biodiesel. To validate the kinetic model, experimental data at intermediate temperatures for ignition delays measured in an RCM and species profiles in a JSR will be utilized, in addition to the experimental data available at high temperatures. Besides ascertaining the importance of including an unsaturated ester constituent in biodiesel surrogates, the reaction scheme proposed and the rate constants used therein will act as a basis to build reaction mechanisms for longer chain unsaturated esters, which are less understood presently. 
+	
 	<td width="15%">
 	<center><img src="./images/Praise_Noah_Johnston.jpg" width="150">	
 	</br>
@@ -489,7 +491,7 @@ Praise obtained his B.E in Mechanical Engineering from Maharaja Engineering Coll
 
 
 <ul>
-<li> <h3>Surrogates for liquid phase applications</h3> 
+<li> <h3>Surrogates for liquid phase applications:</h3> 
 Surrogate mixtures are often used to emulate gas phase combustion characteristics of real fuels, such as heating value, sooting characteristics, and propensity to ignition. These cannot be used as such in liquid phase applications, where multi-phase processes, such as spray injection, are important. Typically, for these applications, surrogates are proposed by matching targets such as density, viscosity, and distillation curves between the real fuel and the surrogate. However, these targets do not pertain to a combustion environment. One attractive option to include evaporation and phase equilibrium dynamics in the surrogate definition is to study the combustion characteristics of an isolated droplet. This project involves simulating the burning process of isolated fuel droplets at low gravity for neat fuel components as well as mixtures of hydrocarbons relevant as transportation fuel surrogates. Evaporation rates of fuels in this simple configuration may be useful quantities to describe the multi-phase effects in a combusting environment. <br> </br>
 
 In this project, numerical solution procedure to predict the droplet burning accounting for the interface conditions will be developed. Techniques to obtain solutions with reduced computational time will be explored. The validity of the model will be ascertained based on the vast data available in the literature. Thereafter, evaporation rate rules will be developed for the surrogate mixture in terms of the components, and investigated if it is indeed an appropriate measure or if other additional parameters may be needed to come up with a good surrogate valid for liquid-phase applications.
@@ -512,8 +514,8 @@ Pragnesh obtained his B.E. in Mechanical Engineering from Gujarat Technological 
 <td>
 
 <ul>
-<li> <h3>Optimization techniques in combustion kinetics</h3> 
-The progress rates of individual steps in the oxidation of fuels are uncertain. In combustion studies, an optimized model is arrived at by taking these uncertainties into account. A black box tool will be developed to optimize reaction schemes based on existing ideas. A starting point will be the in-house code -- Reaction mechanism optimization. Improvements will be suggested to existing methods to achieve reduced computational cost as well ensure physical meaning in the optimized models. 
+<li> <h3>Optimization techniques in combustion kinetics:</h3> 
+The progress rates of individual steps in the oxidation of fuels are uncertain. In combustion studies, an optimized model is arrived at by taking these uncertainties into account. A black box tool will be developed to optimize reaction schemes based on existing ideas. A starting point will be the in-house code -- Reaction mechanism optimization. Improvements will be suggested to existing methods to achieve reduced computational cost as well ensure consistency in the optimized models. 
 
 </br>	
 	<td width="15%">
