editing dme details

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ Aditya obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute
 <figure><center><img src="./current_research/oxygenates_rohit/a2EvsYF1.jpg"  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"> </center>
 <figcaption> Fig: Diesel and blends of diesel and oxygenates: Variation of fuel mass fraction, YF,1, as a function of strain rate at extinction, a2,E (presented at the 10th U.S. National Combustion Meeting, 2017)  </figcaption> </figure> -->
  
-<center><img src="./current_research/oxygenates_rohit/23spec_14step_results.jpg"  style="float: left; width: 52%; margin-right: 2%; margin-bottom: 0.5em;"> </center> 
+<br><br> <center><img src="./current_research/oxygenates_rohit/23spec_14step_results.jpg"  style="float: left; width: 52%; margin-right: 2%; margin-bottom: 0.5em;"> </center> 
 In order to critically evaluate the overall combustion behaviour of DME via numerical simulations, an accurate as well as compact kinetic mechanism to describe its oxidation is most essential. A short kinetic mechanism consisting of 23 species and 88 elementary reactions is proposed to describe the oxidation of DME based on the detailed San Diego mechanism. The short mechanism accurately reproduces the available experimental data for ignition delays, laminar flame speeds, and species profiles in flow reactors as well as jet-stirred reactors. 
 </br> </br>
 To assess the validity of this reaction mechanism in non-premixed systems, extinction strain rates of  DME-air mixtures, which are not available in the literature, are measured in a counter-flow diffusion flame burner. Details on the experimental set up can be found <a href=https://www.dropbox.com/s/r92rqrpryb71g3j/CFDF_Burner.pdf?dl=0" target="_blank"> here</a>.
