--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@ image2.src = "images/img4.jpg"
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'Home')" id="defaultOpen">Home</button>
   <button class="tablinks" onclick="openCity(event, 'Current_Research')">Research Team and Activities</button>
+<!--  <button class="tablinks" onclick="openCity(event, 'Alumni')">Alumni</button> -->
   <button class="tablinks" onclick="openCity(event, 'Publications')">Publications</button>
   <button class="tablinks" onclick="openCity(event, 'Available_Projects')">Available Projects</button>
   <button class="tablinks" onclick="openCity(event, 'Teaching')">Teaching</button>
@@ -531,7 +532,7 @@ The progress rates of individual steps in the oxidation of fuels are uncertain. 
 	<h4>Krunal Rajeshkumar Panchal</h4>
 	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
 </center>
-Krunal obtained his B.E. in Mechanical Engineering from Government Engineering College, Modasa, Gujarat in 2016. Thereafter, he obtained his M. Tech in Mechanical Engineering from Nirma Unervisity, Ahmedabad, Gujarat in 2018. His research topic focuses on optimization methods in combustion kinetics.
+Krunal obtained his B.E. in Mechanical Engineering from Government Engineering College, Modasa, Gujarat in 2016. Thereafter, he obtained his M. Tech in Mechanical Engineering from Nirma Unirversity, Ahmedabad, Gujarat in 2018. His research topic focuses on optimization methods in combustion kinetics.
 </p></br>
 	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </ul>
@@ -937,6 +938,16 @@ Write-up coming soon ...
 </tr>
 </table>
 </div>
+
+<!-- <div id="Alumni" class="tabcontent">
+<table border="1" cellspacing="1" cellpadding="5" width="100%">
+<tr>
+<td>
+</td>
+</tr>
+</table>
+</div>
+-->
 
 <div id="Others" class="tabcontent">
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
