me1100: adding solutions to tutorial 6

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -99,9 +99,9 @@ Jul-Nov 2018 </h1>
  <a href="https://owncloud.iitm.ac.in/index.php/s/TqMN1hbNWSwx1CQ" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/oFya5hMu8El0kE5" target="_blank">Solutions</a> (Solution to P6 needs correction) <br>
  	<li>Tutorial 3:
  <a href="https://owncloud.iitm.ac.in/index.php/s/Wu0avN5EwW9kHRP" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/fsKkxo7jRkBhQjT" target="_blank"> Solutions-Part I</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/lcmwPpUS4uTFLn0" target="_blank"> Solutions-Part II</a><br>
- <li> Tutorial 4: <a href="https://owncloud.iitm.ac.in/index.php/s/jMFWZNLw58997lH" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/igHVMClfIyyuOHY"> Solutions</a> <br>
- <li> Tutorial 5: <a href="https://owncloud.iitm.ac.in/index.php/s/ZwvEhgrHn5gH8n0" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/TvR7zXe0adNkrU9"> Solutions</a> <br>
- <li> Tutorial 6: <a href="https://owncloud.iitm.ac.in/index.php/s/dzAdAbbtYO2nJOm" target="_blank">Problems</a>
+ <li> Tutorial 4: <a href="https://owncloud.iitm.ac.in/index.php/s/jMFWZNLw58997lH" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/igHVMClfIyyuOHY" target="_blank"> Solutions</a> <br>
+ <li> Tutorial 5: <a href="https://owncloud.iitm.ac.in/index.php/s/ZwvEhgrHn5gH8n0" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/TvR7zXe0adNkrU9" target="_blank"> Solutions</a> <br>
+ <li> Tutorial 6: <a href="https://owncloud.iitm.ac.in/index.php/s/dzAdAbbtYO2nJOm" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/br5bRajbjr4IMlE" target="_blank"> Solutions</a>
 	 <br><br>
 	</ul>
 
