--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -79,7 +79,7 @@ Jul-Nov 2018 </h1>
 <li>Mock Quiz I: <a href="https://owncloud.iitm.ac.in/index.php/s/Dj4z87WCepzRcr4" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/p8xPsVC6WTjZjav" target="_blank">Solutions</a>
 <li>Previous years' Quiz I: <a href="https://owncloud.iitm.ac.in/index.php/s/mQcRjFoTFRDYL3m" target="_blank">Questions</a> (view-able upon downloading) <br>
 <li>Quiz II: Jul-Nov 2016: 	
-	 <a href="https://owncloud.iitm.ac.in/index.php/s/JPAouIbyyhjtkBU" target="_blank">Questions</a>
+	 <a href="https://owncloud.iitm.ac.in/index.php/s/JPAouIbyyhjtkBU" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/VF21YzBeK4EzrvD" target="_blank">Solutions</a>
 </ul>
 
 <h3> Exams: same as on moodle </h3>
