ME1100: adding seating plan

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -70,7 +70,10 @@ Jul-Nov 2018 </h1>
 	</ul>
 
 
-
+<h3> Seating arrangement in exams </h3>
+<ul>	<li>	<a href="https://owncloud.iitm.ac.in/index.php/s/aePW5WdhcaJ6AXv" target="_blank">Ramanujan Block 202, 301 </a><br> <br>
+	</ul>
+	
 
 <h3> Practice exams</h3>
 <ul>
