me1100: adding QuizII exam

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -90,6 +90,7 @@ Jul-Nov 2018 </h1>
 <h3> Exams: same as on moodle </h3>
 <ul> 
 	<li> Quiz I: <a href="https://owncloud.iitm.ac.in/index.php/s/mBATrsORPwf3Bh7" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/47uKuppudIFq3Fk" target="_blank">Solutions</a>
+	<li> Quiz II: <a href="https://owncloud.iitm.ac.in/index.php/s/d0S4lWLGxfvIL79" target="_blank">Questions</a> 
 <br></ul>
 </td>
 
